// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - Message 1`] = `
<div
  id="default"
/>
`;

exports[`Mock render - default - value[0] - Message 2`] = `Array []`;

exports[`Mock render - default - value[0] - Message 3`] = `Array []`;

exports[`Mock render - default - value[0] - Message 4`] = `Array []`;

exports[`Mock render - default - value[0] - Message 5`] = `Array []`;

exports[`Mock render - default - value[0] - Message 6`] = `Array []`;

exports[`Mock render - default - value[0] - Message 7`] = `Array []`;

exports[`Mock render - properties.content - value[0] - Message 1`] = `
<div
  id="properties.content"
/>
`;

exports[`Mock render - properties.content - value[0] - Message 2`] = `Array []`;

exports[`Mock render - properties.content - value[0] - Message 3`] = `Array []`;

exports[`Mock render - properties.content - value[0] - Message 4`] = `Array []`;

exports[`Mock render - properties.content - value[0] - Message 5`] = `Array []`;

exports[`Mock render - properties.content - value[0] - Message 6`] = `Array []`;

exports[`Mock render - properties.content - value[0] - Message 7`] = `Array []`;

exports[`Mock render - properties.duration - value[0] - Message 1`] = `
<div
  id="properties.duration"
/>
`;

exports[`Mock render - properties.duration - value[0] - Message 2`] = `Array []`;

exports[`Mock render - properties.duration - value[0] - Message 3`] = `Array []`;

exports[`Mock render - properties.duration - value[0] - Message 4`] = `Array []`;

exports[`Mock render - properties.duration - value[0] - Message 5`] = `Array []`;

exports[`Mock render - properties.duration - value[0] - Message 6`] = `Array []`;

exports[`Mock render - properties.duration - value[0] - Message 7`] = `Array []`;

exports[`Mock render - properties.icon - value[0] - Message 1`] = `
<div
  id="properties.icon"
/>
`;

exports[`Mock render - properties.icon - value[0] - Message 2`] = `Array []`;

exports[`Mock render - properties.icon - value[0] - Message 3`] = `Array []`;

exports[`Mock render - properties.icon - value[0] - Message 4`] = `Array []`;

exports[`Mock render - properties.icon - value[0] - Message 5`] = `Array []`;

exports[`Mock render - properties.icon - value[0] - Message 6`] = `Array []`;

exports[`Mock render - properties.icon - value[0] - Message 7`] = `Array []`;

exports[`Mock render - properties.status: error - value[0] - Message 1`] = `
<div
  id="properties.status: error"
/>
`;

exports[`Mock render - properties.status: error - value[0] - Message 2`] = `Array []`;

exports[`Mock render - properties.status: error - value[0] - Message 3`] = `Array []`;

exports[`Mock render - properties.status: error - value[0] - Message 4`] = `Array []`;

exports[`Mock render - properties.status: error - value[0] - Message 5`] = `Array []`;

exports[`Mock render - properties.status: error - value[0] - Message 6`] = `Array []`;

exports[`Mock render - properties.status: error - value[0] - Message 7`] = `Array []`;

exports[`Mock render - properties.status: info - value[0] - Message 1`] = `
<div
  id="properties.status: info"
/>
`;

exports[`Mock render - properties.status: info - value[0] - Message 2`] = `Array []`;

exports[`Mock render - properties.status: info - value[0] - Message 3`] = `Array []`;

exports[`Mock render - properties.status: info - value[0] - Message 4`] = `Array []`;

exports[`Mock render - properties.status: info - value[0] - Message 5`] = `Array []`;

exports[`Mock render - properties.status: info - value[0] - Message 6`] = `Array []`;

exports[`Mock render - properties.status: info - value[0] - Message 7`] = `Array []`;

exports[`Mock render - properties.status: loading - value[0] - Message 1`] = `
<div
  id="properties.status: loading"
/>
`;

exports[`Mock render - properties.status: loading - value[0] - Message 2`] = `Array []`;

exports[`Mock render - properties.status: loading - value[0] - Message 3`] = `Array []`;

exports[`Mock render - properties.status: loading - value[0] - Message 4`] = `Array []`;

exports[`Mock render - properties.status: loading - value[0] - Message 5`] = `Array []`;

exports[`Mock render - properties.status: loading - value[0] - Message 6`] = `Array []`;

exports[`Mock render - properties.status: loading - value[0] - Message 7`] = `Array []`;

exports[`Mock render - properties.status: warning - value[0] - Message 1`] = `
<div
  id="properties.status: warning"
/>
`;

exports[`Mock render - properties.status: warning - value[0] - Message 2`] = `Array []`;

exports[`Mock render - properties.status: warning - value[0] - Message 3`] = `Array []`;

exports[`Mock render - properties.status: warning - value[0] - Message 4`] = `Array []`;

exports[`Mock render - properties.status: warning - value[0] - Message 5`] = `Array []`;

exports[`Mock render - properties.status: warning - value[0] - Message 6`] = `Array []`;

exports[`Mock render - properties.status: warning - value[0] - Message 7`] = `Array []`;

exports[`Mock render - with html content - value[0] - Message 1`] = `
<div
  id="with html content"
/>
`;

exports[`Mock render - with html content - value[0] - Message 2`] = `Array []`;

exports[`Mock render - with html content - value[0] - Message 3`] = `Array []`;

exports[`Mock render - with html content - value[0] - Message 4`] = `Array []`;

exports[`Mock render - with html content - value[0] - Message 5`] = `Array []`;

exports[`Mock render - with html content - value[0] - Message 6`] = `Array []`;

exports[`Mock render - with html content - value[0] - Message 7`] = `Array []`;
